Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-4442

x-match fails to match properties

Attach filesAttach ScreenshotVotersWatch issueWatchersCreate sub-taskLinkCloneUpdate Comment AuthorReplace String in CommentUpdate Comment VisibilityDelete Comments
    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.18
    • 0.19
    • C++ Broker
    • None
    • CentOS 6.2

    Description

      Using the spout/drain messaging example. I run the spout like this:
      spout -P source:sports -c 1 my_exchange

      And I run drain like this:
      drain -f "my_queue; {create:receiver, node:{x-declare:

      {auto-delete:true}

      ,x-bindings:[{exchange:'my_exchange',queue:'my_queue,key:'key',arguments:{x-match:any,source:'sports'}}]}}"

      Using a drain built on version v0.14, this works, the source property is correctly matched and messages are correctly routed to the drain through a v0.18 C++ broker; using a drain built in version v0.18, messages are not routed to the drain's queue.

      Further inspection (at the packet level) shows that the difference is that in the exchange.bind method on the drain side, 'sports' is encoded as a variable binary (0x90) in v0.14, but a string (0x95) in v0.18.

      Attachments

        Activity

          This comment will be Viewable by All Users Viewable by All Users
          Cancel

          People

            gsim Gordon Sim
            lanced Lance Doran
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Slack

                Issue deployment