QPID-4442: make spout example send properties as utf8 strings

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1411154 13f79535-47bb-0310-9956-ffa450edef68